--- a/brands.html
+++ b/brands.html
@@ -68,39 +68,39 @@
                                     
                                     <li class="menu-item-1">
                                           <span id="order">01.</span>
-                                          <span id="menu">&nbsp;Home</span>
+                                          <span id="menu"><a href="index.html">&nbsp;Home</a></span>
                                     </li>
                                     <li class="menu-item-2">
                                           <span id="order">02.</span>
-                                          <span id="menu">&nbsp;Folk</span>
+                                          <span id="menu"><a href="folk.html">&nbsp;Folk</a></span>
                                     </li>
                                     <li class="menu-item-3">
                                           <span id="order">03.</span>
-                                          <span id="menu">&nbsp;Manner of Living</span>
+                                          <span id="menu"><a href="mol.html">&nbsp;Manner of Living</a></span>
                                     </li>
                                     <li class="menu-item-4">
                                           <span id="order">04.</span>
-                                          <span id="menu">&nbsp;Brands</span>
+                                          <span id="menu"><a href="brands.html">&nbsp;Brands</a></span>
                                     </li>
                                     <li class="menu-item-5">
                                           <span id="order">05.</span>
-                                          <span id="menu">&nbsp;Events</span>
+                                          <span id="menu"><a href="events.html">&nbsp;Events</a></span>
                                     </li>
                                     <li class="menu-item-6"> 
                                           <span id="order">06.</span>
-                                          <span id="menu">&nbsp;Living World</span>
+                                          <span id="menu"><a href="living.html">&nbsp;Living World</a></span>
                                     </li>
                                     <li class="menu-item-7"> 
                                           <span id="order">07.</span>
-                                          <span id="menu">&nbsp;Personal</span>
+                                          <span id="menu"><a href="personal.html">&nbsp;Personal</a></span>
                                     </li>
                                     <li class="menu-item-8">
                                           <span id="order">08.</span>
-                                          <span id="menu">&nbsp;About</span>
+                                          <span id="menu"><a href="brands.html">&nbsp;About</a></span>
                                     </li>
                                     <li class="menu-item-9">
                                           <span id="order">09.</span>
-                                          <span id="menu">&nbsp;Shop</span>
+                                          <span id="menu"><a href="brands.html">&nbsp;Shop</a></span>
                                     </li>
                               </ul>
                         </div>
